Replace new Double/Long/Integer/Float by valueof